Styled new components and fixed layout spacing

--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,8 @@
     flex-direction: column;
     align-items: flex-end;
     justify-content: right;
-    padding: 16px;
     overflow: hidden;
+    padding-right: 1.5%;
   }
   
   /* Chat box container */
@@ -15,15 +15,15 @@
     position: relative; /* Needed for absolute positioning of the lines */
     width: 100%;
     height: 100vh;
-    max-height: 90%;
-    max-width: 50%;
-    margin-top: 3%;
+    max-height: 93%;
+    max-width: 65%;
+    margin-top: 2%;
     display: flex;
     flex-direction: column;
     background: rgba(255, 255, 255, 0.18);
     backdrop-filter: blur(18px);
     -webkit-backdrop-filter: blur(18px);
-    padding: 20px 0px 0px 20px;
+    padding: 50px 0px 50px 20px;
 }
 
 /* Pseudo-elements for extending lines */
@@ -80,13 +80,14 @@
     margin-bottom: -55%;
     min-height: 80%;
     gap: 8px;
+    padding-left: 50px;
   }
   
   /* Chat message bubbles */
   .message {
     padding: 10px;
     border-radius: 8px;
-    max-width: 50%;
+    max-width: 40%;
     word-wrap: break-word;
   }
   
@@ -104,7 +105,7 @@
     background-color: #3354ff;
     color: white;
     align-self: flex-end;
-    margin-right: 10px;
+    margin-right: 50px;
     border-radius: 30px 30px 10px 30px;
     padding: 10px 20px 10px 20px;
   }
@@ -114,6 +115,7 @@
     margin-top: 60%;
     margin-bottom: 3%;
     display: flex;
+    padding-left: 50px;
   }
   
   /* Input field */
@@ -132,7 +134,7 @@
     color: white;
     border: none;
     padding: 10px 50px;
-    margin-right: 10px;
+    margin-right: 50px;
     border-radius: 50px;
     cursor: pointer;
     font-size: 14px;
@@ -149,4 +151,26 @@
     left: 20px;
     margin-top: 3.2%;
     padding-right: 75%;
+  }
+
+  .restart_button_container {
+    margin-top: -1.5%;
+    padding-left: 50px;
+  }
+
+  .restart_button {
+    background-color: #3354ff;
+    color: white;
+    padding: 5px 20px 5px 20px;
+    border-radius: 50px;
+    font-size: 14px;
+  }
+
+  .review_answers_button {
+    background-color: #3354ff;
+    color: white;
+    padding: 5px 20px 5px 20px;
+    border-radius: 50px;
+    font-size: 14px;
+    margin-left: 10px;
   }
